--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 Hello there, awesome person!
 <html>
-<title>I am a title!</title>
+<head>
+    <title>I am a title!</title>
+</head>
     <body>
         The HTML content goes here.
     </body>
