--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Hello there, awesome person!
 </head>
     <body>
         The HTML content goes here.
+<img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
