--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@ Hello there, awesome person!
     <body>
         The HTML content goes here.
 <img src="https://octodex.github.com/images/vinyltocat.png">
-    </body>
+   <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+ </body>
+
 </html>
