--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ Hello there, awesome person!
     <body>
         The HTML content goes here.
 <img src="https://octodex.github.com/images/vinyltocat.png">
+  ```
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+  ```
    <ul>
     <li>This</li>
     <li>Is an</li>
