--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ Hello there, awesome person!
 <img src="https://octodex.github.com/images/vinyltocat.png">
   ```
   <li><a href="https://github.com">This is a link to GitHub!</a></li>
-  ```
+  
+        <link rel="stylesheet" href="style.css">
+    
    <ul>
     <li>This</li>
     <li>Is an</li>
